# biasmeter

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  scraper.py
auto_news/: __init__.py  app.py  config.py  report.py  store.py
biasmeter/: __init__.py  app.py  config.py  report.py  store.py
